// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datafile details panel component renders correctly 1`] = `
Object {
  "detailsPanelResize": [MockFunction] {
    "calls": Array [
      Array [],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "rowData": Object {
    "createTime": "2019-06-11",
    "description": "Test description",
    "id": 1,
    "location": "/test/location",
    "modTime": "2019-06-10",
    "name": "Test 1",
  },
}
`;

exports[`Datafile details panel component renders parameters tab when present in the data 1`] = `
Object {
  "detailsPanelResize": [MockFunction] {
    "calls": Array [
      Array [],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "rowData": Object {
    "createTime": "2019-06-11",
    "description": "Test description",
    "id": 1,
    "location": "/test/location",
    "modTime": "2019-06-10",
    "name": "Test 1",
    "parameters": Array [
      Object {
        "id": 2,
        "stringValue": "String test",
        "type": Object {
          "id": 3,
          "name": "String parameter",
          "units": "foo/s",
          "valueType": "STRING",
        },
      },
      Object {
        "id": 4,
        "numericValue": 1337,
        "type": Object {
          "id": 5,
          "name": "Numeric parameter",
          "units": "bar/s",
          "valueType": "NUMERIC",
        },
      },
      Object {
        "dateTimeValue": "2019-09-10 11:48:00",
        "id": 6,
        "type": Object {
          "id": 7,
          "name": "Datetime parameter",
          "units": "baz/s",
          "valueType": "DATE_AND_TIME",
        },
      },
      Object {
        "dateTimeValue": "2019-09-10 11:48:00",
        "id": 8,
        "type": Object {
          "id": 9,
          "name": "Invalid parameter",
          "units": "n/a",
          "valueType": "",
        },
      },
      Object {
        "id": 10,
        "stringValue": "Missing PARAMETERTYPE",
      },
    ],
  },
}
`;
